Added more to the random apple choices, added special effects

--- a/AppleGame/index.html
+++ b/AppleGame/index.html
@@ -16,7 +16,7 @@
       <div id="gameStartDiv" class="gameUI">
         <h1>Apple Catcher</h1>
         <p>🍏You have 30 seconds to catch the Apples!🍎</p>
-        <p>Use WASD or Arrow Keys to move</p>
+        <p>Touch/Use WASD or Arrow Keys to move</p>
         <p>If you catch more than 30 apples you win</p>
         <p>If you catch less than 30 apples you lose.</p>
         <p>Click the start button to begin</p>
